name:                diagram
version:             1.0.0
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Diagram.Koch
                     , Diagram.Sierpinski
  build-depends:       base >= 4.7 && < 5
                     , diagrams-lib
                     , diagrams-svg
  default-language:    Haskell2010
  ghc-options:         -Wall

executable koch
  hs-source-dirs:      examples
  main-is:             koch.hs
  build-depends:       base >= 4.7 && < 5
                     , diagram
                     , diagrams-svg
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

executable sierpinski
  hs-source-dirs:      examples
  main-is:             sierpinski.hs
  build-depends:       base >= 4.7 && < 5
                     , diagram
                     , diagrams-svg
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

