name:                diagram
version:             1.0.0
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Diagram.Hilbert
                     , Diagram.Knot
                     , Diagram.Koch
                     , Diagram.Labyrinth
                     , Diagram.Sierpinski
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , diagrams-lib
                     , diagrams-svg
                     , MonadRandom
  default-language:    Haskell2010
  ghc-options:         -Wall

executable hilbert
  hs-source-dirs:      examples
  main-is:             hilbert.hs
  build-depends:       base >= 4.7 && < 5
                     , diagram
                     , diagrams-svg
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

executable knot
  hs-source-dirs:      examples
  main-is:             knot.hs
  build-depends:       base >= 4.7 && < 5
                     , diagram
                     , diagrams-svg
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

executable koch
  hs-source-dirs:      examples
  main-is:             koch.hs
  build-depends:       base >= 4.7 && < 5
                     , diagram
                     , diagrams-svg
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

executable labyrinth
  hs-source-dirs:      examples
  main-is:             labyrinth.hs
  build-depends:       base >= 4.7 && < 5
                     , diagram
                     , diagrams-svg
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

executable sierpinski
  hs-source-dirs:      examples
  main-is:             sierpinski.hs
  build-depends:       base >= 4.7 && < 5
                     , diagram
                     , diagrams-svg
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

